test/files/pos/bug0054.scala
class A {
  case class B(x: C) extends A { val z: A.this.C = x }
  class C {}
}
